// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`CvToastNotification should not render close button when hideCloseButton is true 1`] = `
<div data-notification="" role="alert" class="cv-notification bx--toast-notification bx--toast-notification--error" actionlabel="test action label">
  <anonymous-stub class="bx--toast-notification__icon"></anonymous-stub>
  <div class="bx--toast-notification__details">
    <h3 class="bx--toast-notification__title"></h3>
    <p class="bx--toast-notification__subtitle"></p>
    <p class="bx--toast-notification__caption"></p>
  </div>
  <!---->
</div>
`;

exports[`CvToastNotification should not render close button when hideCloseButton is true 2`] = `
<div data-notification="" aria-live="polite" class="cv-notification bx--toast-notification bx--toast-notification--info" actionlabel="test action label">
  <anonymous-stub class="bx--toast-notification__icon"></anonymous-stub>
  <div class="bx--toast-notification__details">
    <h3 class="bx--toast-notification__title"></h3>
    <p class="bx--toast-notification__subtitle"></p>
    <p class="bx--toast-notification__caption"></p>
  </div>
  <!---->
</div>
`;

exports[`CvToastNotification should not render close button when hideCloseButton is true 3`] = `
<div data-notification="" role="alert" class="cv-notification bx--toast-notification bx--toast-notification--warning" actionlabel="test action label">
  <anonymous-stub class="bx--toast-notification__icon"></anonymous-stub>
  <div class="bx--toast-notification__details">
    <h3 class="bx--toast-notification__title"></h3>
    <p class="bx--toast-notification__subtitle"></p>
    <p class="bx--toast-notification__caption"></p>
  </div>
  <!---->
</div>
`;

exports[`CvToastNotification should not render close button when hideCloseButton is true 4`] = `
<div data-notification="" aria-live="polite" class="cv-notification bx--toast-notification bx--toast-notification--success" actionlabel="test action label">
  <anonymous-stub class="bx--toast-notification__icon"></anonymous-stub>
  <div class="bx--toast-notification__details">
    <h3 class="bx--toast-notification__title"></h3>
    <p class="bx--toast-notification__subtitle"></p>
    <p class="bx--toast-notification__caption"></p>
  </div>
  <!---->
</div>
`;

exports[`CvToastNotification should render correctly 1`] = `
<div data-notification="" role="alert" class="cv-notification bx--toast-notification bx--toast-notification--error">
  <anonymous-stub class="bx--toast-notification__icon"></anonymous-stub>
  <div class="bx--toast-notification__details">
    <h3 class="bx--toast-notification__title"></h3>
    <p class="bx--toast-notification__subtitle"></p>
    <p class="bx--toast-notification__caption">TEST</p>
  </div> <button aria-label="Dismiss notification" type="button" data-notification-btn="" class="bx--toast-notification__close-button">
    <close20-stub class="bx--toast-notification__close-icon"></close20-stub>
  </button>
</div>
`;

exports[`CvToastNotification should render correctly 2`] = `
<div data-notification="" aria-live="polite" class="cv-notification bx--toast-notification bx--toast-notification--info">
  <anonymous-stub class="bx--toast-notification__icon"></anonymous-stub>
  <div class="bx--toast-notification__details">
    <h3 class="bx--toast-notification__title"></h3>
    <p class="bx--toast-notification__subtitle"></p>
    <p class="bx--toast-notification__caption">TEST</p>
  </div> <button aria-label="Dismiss notification" type="button" data-notification-btn="" class="bx--toast-notification__close-button">
    <close20-stub class="bx--toast-notification__close-icon"></close20-stub>
  </button>
</div>
`;

exports[`CvToastNotification should render correctly 3`] = `
<div data-notification="" role="alert" class="cv-notification bx--toast-notification bx--toast-notification--warning">
  <anonymous-stub class="bx--toast-notification__icon"></anonymous-stub>
  <div class="bx--toast-notification__details">
    <h3 class="bx--toast-notification__title"></h3>
    <p class="bx--toast-notification__subtitle"></p>
    <p class="bx--toast-notification__caption">TEST</p>
  </div> <button aria-label="Dismiss notification" type="button" data-notification-btn="" class="bx--toast-notification__close-button">
    <close20-stub class="bx--toast-notification__close-icon"></close20-stub>
  </button>
</div>
`;

exports[`CvToastNotification should render correctly 4`] = `
<div data-notification="" aria-live="polite" class="cv-notification bx--toast-notification bx--toast-notification--success">
  <anonymous-stub class="bx--toast-notification__icon"></anonymous-stub>
  <div class="bx--toast-notification__details">
    <h3 class="bx--toast-notification__title"></h3>
    <p class="bx--toast-notification__subtitle"></p>
    <p class="bx--toast-notification__caption">TEST</p>
  </div> <button aria-label="Dismiss notification" type="button" data-notification-btn="" class="bx--toast-notification__close-button">
    <close20-stub class="bx--toast-notification__close-icon"></close20-stub>
  </button>
</div>
`;

exports[`CvToastNotification should render correctly when low contrast is used 1`] = `
<div data-notification="" role="alert" class="cv-notification bx--toast-notification bx--toast-notification--error bx--toast-notification--low-contrast">
  <anonymous-stub class="bx--toast-notification__icon"></anonymous-stub>
  <div class="bx--toast-notification__details">
    <h3 class="bx--toast-notification__title"></h3>
    <p class="bx--toast-notification__subtitle"></p>
    <p class="bx--toast-notification__caption">TEST</p>
  </div> <button aria-label="Dismiss notification" type="button" data-notification-btn="" class="bx--toast-notification__close-button">
    <close20-stub class="bx--toast-notification__close-icon"></close20-stub>
  </button>
</div>
`;

exports[`CvToastNotification should render correctly when low contrast is used 2`] = `
<div data-notification="" aria-live="polite" class="cv-notification bx--toast-notification bx--toast-notification--info bx--toast-notification--low-contrast">
  <anonymous-stub class="bx--toast-notification__icon"></anonymous-stub>
  <div class="bx--toast-notification__details">
    <h3 class="bx--toast-notification__title"></h3>
    <p class="bx--toast-notification__subtitle"></p>
    <p class="bx--toast-notification__caption">TEST</p>
  </div> <button aria-label="Dismiss notification" type="button" data-notification-btn="" class="bx--toast-notification__close-button">
    <close20-stub class="bx--toast-notification__close-icon"></close20-stub>
  </button>
</div>
`;

exports[`CvToastNotification should render correctly when low contrast is used 3`] = `
<div data-notification="" role="alert" class="cv-notification bx--toast-notification bx--toast-notification--warning bx--toast-notification--low-contrast">
  <anonymous-stub class="bx--toast-notification__icon"></anonymous-stub>
  <div class="bx--toast-notification__details">
    <h3 class="bx--toast-notification__title"></h3>
    <p class="bx--toast-notification__subtitle"></p>
    <p class="bx--toast-notification__caption">TEST</p>
  </div> <button aria-label="Dismiss notification" type="button" data-notification-btn="" class="bx--toast-notification__close-button">
    <close20-stub class="bx--toast-notification__close-icon"></close20-stub>
  </button>
</div>
`;

exports[`CvToastNotification should render correctly when low contrast is used 4`] = `
<div data-notification="" aria-live="polite" class="cv-notification bx--toast-notification bx--toast-notification--success bx--toast-notification--low-contrast">
  <anonymous-stub class="bx--toast-notification__icon"></anonymous-stub>
  <div class="bx--toast-notification__details">
    <h3 class="bx--toast-notification__title"></h3>
    <p class="bx--toast-notification__subtitle"></p>
    <p class="bx--toast-notification__caption">TEST</p>
  </div> <button aria-label="Dismiss notification" type="button" data-notification-btn="" class="bx--toast-notification__close-button">
    <close20-stub class="bx--toast-notification__close-icon"></close20-stub>
  </button>
</div>
`;
